# installer

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: test_docker.sh
src/: app.rs  kmsg.rs  main.rs
src/input/: evdev_handler.rs  mod.rs
src/platform/: disks.rs  install.rs  mod.rs  partition.rs
src/ui/: fb.rs  font_8x8.rs  mod.rs
