[package]
name = "truthdb-installer"
version = "0.1.0"
edition = "2021"
authors = ["TruthDB Team"]
description = "TruthDB installer for initramfs environment"
license = "Apache-2.0"

[[bin]]
name = "truthdb-installer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["fs", "ioctl", "mman", "mount"] }
evdev = "0.12"
libc = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Reduce binary size
