[package]
name = "truthdb-installer"
version = "0.1.0"
edition = "2024"
authors = ["TruthDB Team"]
description = "TruthDB installer for initramfs environment"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.30.1", features = ["fs", "ioctl", "mman", "mount"] }
evdev = "0.13.2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Reduce binary size
